name:          lens-examples
category:      Data, Lenses
version:       0.1
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Niklas Haas
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/lens/
bug-reports:   http://github.com/ekmett/lens/issues
copyright:     Copyright (C) 2012 Edward A. Kmett
synopsis:      Lenses, Folds and Traversals
description:   Lenses, Folds and Traversals
               .
               Pong Example

build-type:    Simple
tested-with:   GHC == 7.4.2
             , GHC == 7.6.3
             , GHC == 7.8.4
             , GHC == 7.10.3
             , GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.3
             , GHC == 8.6.1

source-repository head
  type: git
  location: git://github.com/ekmett/lens.git

flag pong
  default: True

executable lens-pong
  if !flag(pong)
    buildable: False

  build-depends:
    base       >= 4.5   && < 5,
    containers >= 0.4   && < 0.6,
    gloss      >= 1.12  && < 1.13,
    lens,
    mtl        >= 2.0.1 && < 2.3,
    random     >= 1.0   && < 1.2
  main-is: Pong.hs
