cabal-version: >= 1.10
name:          lens-build
category:      Data, Lenses
version:       0.1.0.0
license:       BSD3
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/lens/
bug-reports:   http://github.com/ekmett/lens/issues
copyright:     Copyright (C) 2026 Edward A. Kmett
synopsis:      Type-level, completeness-checked record construction for lens
description:
  A companion to @lens@ exploring the "track partial construction in the type
  system" idea: build a record from lens-style field assignments where omitting
  a field is a compile-time type error rather than a silent bottom.
build-type:    Simple
-- The type-level/TH machinery targets the template-haskell 2.15 (GHC 8.8) and
-- later API; older GHCs are skipped via `buildable: False` below.
tested-with:   GHC == 8.8.4
             , GHC == 8.10.7
             , GHC == 9.0.2
             , GHC == 9.2.8
             , GHC == 9.4.8
             , GHC == 9.6.7
             , GHC == 9.8.4
             , GHC == 9.10.3
             , GHC == 9.12.2
             , GHC == 9.14.1

extra-source-files:
  CHANGELOG.markdown

source-repository head
  type: git
  location: https://github.com/ekmett/lens.git

flag build-negative-test
  description:
    Build the intentionally ill-typed negative-test executable (tests/negative),
    which MUST fail to compile. Off by default so it never affects normal builds;
    the negative-test workflow / tests/negative/run.sh turns it on.
  default: False
  manual:  True

library
  -- Requires the template-haskell 2.15+ (GHC 8.8+) tySynEqn / tySynInstD API.
  if impl(ghc < 8.8)
    buildable: False

  build-depends:
    base             >= 4.9   && < 5,
    lens             >= 4     && < 6,
    template-haskell >= 2.15  && < 2.25,
    th-abstraction   >= 0.4.1 && < 0.8

  exposed-modules:
    Control.Lens.Build
    Control.Lens.Build.TH

  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010

test-suite builder
  type: exitcode-stdio-1.0
  main-is: builder.hs
  hs-source-dirs: tests
  if impl(ghc < 8.8)
    buildable: False

  build-depends:
    base       >= 4.9 && < 5,
    lens       >= 4   && < 6,
    lens-build
  ghc-options: -Wall
  default-language: Haskell2010

-- The negative half of the test suite: this executable is *expected to fail to
-- compile*. Each is gated behind the manual build-negative-test flag so normal
-- builds, the sdist, and `cabal check` ignore them; tests/negative/run.sh
-- enables the flag and asserts each compile fails with its expected message.
--
-- t-missing-field exercises the builder (an incomplete `build`); the t-* below
-- exercise the makeBuild generator's guards on unsupported input.
executable t-missing-field
  main-is: TMissingField.hs
  hs-source-dirs: tests/negative
  if !flag(build-negative-test)
    buildable: False
  if impl(ghc < 8.8)
    buildable: False

  build-depends:
    base       >= 4.9 && < 5,
    lens       >= 4   && < 6,
    lens-build
  default-language: Haskell2010

-- makeBuild on a sum type -> "single-constructor records only"
executable t-sum-type
  main-is: TSumType.hs
  hs-source-dirs: tests/negative
  if !flag(build-negative-test)
    buildable: False
  if impl(ghc < 8.8)
    buildable: False

  build-depends:
    base       >= 4.9 && < 5,
    lens-build
  default-language: Haskell2010

-- makeBuild on a positional (non-record) constructor -> "named fields is required"
executable t-positional
  main-is: TPositional.hs
  hs-source-dirs: tests/negative
  if !flag(build-negative-test)
    buildable: False
  if impl(ghc < 8.8)
    buildable: False

  build-depends:
    base       >= 4.9 && < 5,
    lens-build
  default-language: Haskell2010

-- makeBuild on a parameterized type -> "no type parameters"
executable t-parameterized
  main-is: TParameterized.hs
  hs-source-dirs: tests/negative
  if !flag(build-negative-test)
    buildable: False
  if impl(ghc < 8.8)
    buildable: False

  build-depends:
    base       >= 4.9 && < 5,
    lens-build
  default-language: Haskell2010
