name:          lens-properties
category:      Data, Lenses
version:       4.7
license:       BSD3
cabal-version: >= 1.8
author:        Edward Kmett and Oliver Charles
maintainer:    Edward Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/lens/
bug-reports:   http://github.com/ekmett/lens/issues
copyright:     Copyright (C) 2012-2014 Edward A. Kmett, Copyright (C) 2014 Oliver Charles
synopsis:      QuickCheck properties for lens
build-type:    Simple

extra-source-files:
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/lens.git

library
  build-depends:
    base         >= 4.3 && < 5,
    lens         >= 4   && < 4.9,
    QuickCheck   >= 2.4 && < 2.8,
    transformers >= 0.2 && < 0.5

  exposed-modules:
    Control.Lens.Properties

  hs-source-dirs: src
